--- a/package.json
+++ b/package.json
@@ -15,12 +15,23 @@
   "type": "commonjs",
   "main": "tailwind.config.js",
   "scripts": {
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./css/styles.css --watch"
+    "prepare": "husky install",
+    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./css/styles.css --watch",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.17"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,scss,md,html,json,svg}": [
+      "prettier --check"
+    ]
+  },
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4.1.17"
   }
 }
